feat: add spell command and handle updating spellbook